# openapi.yaml
@@ -120,3 +120,41 @@ paths:
           description: Method not allowed
         "500":
           description: Internal Server Error
+  /generateFiles:
+    post:
+      summary: Generates multiple 10MB files in the specified directory
+      requestBody:
+        required: true
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                dirPath:
+                  type: string
+                  description: Directory path where the files should be generated
+                sizeInMB:
+                  type: integer
+                  description: Total size in MB. Multiple 10MB files will be generated to achieve this.
+      responses:
+        "200":
+          description: Files generated successfully
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                  serverId:
+                    type: string
+                  requestId:
+                    type: string
+                  data:
+                    type: object
+        "400":
+          description: Bad Request (invalid input)
+        "405":
+          description: Method not allowed
+        "500":
+          description: Internal Server Error
